force-app/log/default/objects/zak_LogEvent__e/zak_LogEvent__e.object-meta.xml
<CustomObject>
    <description>Event used for logging.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>