force-app/log/default/objects/zak_LogEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message(s).</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>