force-app/log/default/objects/zak_LogEvent__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>Populated from Request.getQuiddity().</description>
    <label>Quiddity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>