force-app/log/default/objects/zak_LogEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Record Id causing event. Populate only if event is reported per record. Could be used for auto-reprocessing of failed records.</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>