force-app/log/default/objects/zak_LogEvent__e/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Populated from Request.getRequestId(). Used to discover errors within request.</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>