force-app/log/default/objects/zak_LogEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Anything allowing to understand context of code execution at the time of the log. It could be stack trace in case of exception or stack of trigger invocations or any other info.</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>