force-app/log/default/objects/zak_LogEvent__e/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>ERR, WARN, INFO, PERF or user defined topic.</description>
    <label>Topic</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>