force-app/log/default/objects/zak_LogEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>User Id of the current user creating log.</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>